<?xml version="1.0"?>
<package format="3">
  <name>pid_assignment</name>
  <version>0.1.0</version>
  <description>PID assignment INF3480 (ROS 2)</description>

  <maintainer email="jorgehn@student.matnat.uio.no">Jorgen Nordmoen</maintainer>
  <license>MIT</license>
  <author email="jorgehn@student.matnat.uio.no">Jorgen Nordmoen</author>

  <url type="website">https://github.uio.no/INF3480/crustcrawler_pen</url>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
